@@ -38,7 +38,6 @@ exception statement from your version. */
 package javax.swing.plaf.basic;
 
 import java.awt.event.MouseEvent;
-
 import javax.swing.JComponent;
 import javax.swing.JMenuItem;
 import javax.swing.MenuElement;
@@ -49,7 +48,7 @@ import javax.swing.plaf.ComponentUI;
 
 
 /**
- * DOCUMENT ME!
+ * UI Delegator for JRadioButtonMenuItem
  */
 public class BasicRadioButtonMenuItemUI extends BasicMenuItemUI
 {
@@ -64,12 +63,13 @@ public class BasicRadioButtonMenuItemUI extends BasicMenuItemUI
   }
 
   /**
-   * DOCUMENT ME!
-   *
-   * @param b DOCUMENT ME!
-   *
-   * @return $returnType$ DOCUMENT ME!
-   */
+    * Factory method to create a BasicRadioButtonMenuItemUI for the given {@link
+    * JComponent}, which should be a JRadioButtonMenuItem.
+    *
+    * @param b The {@link JComponent} a UI is being created for.
+    *
+    * @return A BasicRadioButtonMenuItemUI for the {@link JComponent}.
+    */
   public static ComponentUI createUI(JComponent b)
   {
     return new BasicRadioButtonMenuItemUI();
@@ -83,7 +83,6 @@ public class BasicRadioButtonMenuItemUI extends BasicMenuItemUI
   protected String getPropertyPrefix()
   {
     return null;
-    // TODO
   }
 
   /**
@@ -94,8 +93,9 @@ public class BasicRadioButtonMenuItemUI extends BasicMenuItemUI
    * @param path DOCUMENT ME!
    * @param manager DOCUMENT ME!
    */
-  void processMouseEvent(JMenuItem item, MouseEvent e, MenuElement[] path,
-                         MenuSelectionManager manager)
+  public void processMouseEvent(JMenuItem item, MouseEvent e,
+                                MenuElement[] path,
+                                MenuSelectionManager manager)
   {
   }
 }
